5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4178/executions/1764_1183.log
== TEST (2019-05-28 16:16:46) 
-- CODE:
bb = array(eval(input("Entrada: ")))

v = (x for x in bb >= 0)

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    bb = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:17:44) 
-- CODE:
from numpy import *

bb = array(eval(input("Entrada: ")))

v = (x for x in bb >= 0)

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:18:13) 
-- CODE:
from numpy import *

bb = array(eval(input("Entrada: ")))

v = (x for x in bb >= 0)

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:18:49) 
-- CODE:
from numpy import *

bb = array(eval(input("Entrada: ")))

v = (x for x in bb >= 0)

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:19:48) 
-- CODE:
from numpy import *

bb = array(eval(input("Entrada: ")))

v = (x for x in bb >= 0)

print(bb)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:20:04) 
-- CODE:
from numpy import *

bb = array(eval(input("Entrada: ")))

v = (x for x in bb >= 0)

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:20:34) 
-- CODE:
from numpy import *

bb = array(eval(input("Entrada: ")))

v = [x for x in bb >= 0]

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:22:46) 
-- CODE:
from numpy import *

bb = array(eval(input("Entrada: ")))
bb = [x for x in bb >= 0]
while bb 
-- ERROR:
File "XXXX", line 5
    while bb 
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:22:56) 
-- CODE:
from numpy import *

bb = array(eval(input("Entrada: ")))
bb = [x for x in bb >= 0]
print(bb)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:23:35) 
-- CODE:
from numpy import *

bb = array(eval(input("Entrada: ")))
bb = [x in x for bb >= 0]
print(bb)
-- ERROR:
File "XXXX", line 4
    bb = [x in x for bb >= 0]
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:24:59) 
-- CODE:
from numpy import *

bb = array(eval(input("Entrada: ")))

while (bb[i] >= 0):
	
print(bb)	

-- ERROR:
File "XXXX", line 7
    print(bb)	
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:25:10) 
-- CODE:
from numpy import *

bb = array(eval(input("Entrada: ")))

while (bb[i] >= 0):
	
print(bb)

-- ERROR:
File "XXXX", line 7
    print(bb)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:25:19) 
-- CODE:
from numpy import *

bb = array(eval(input("Entrada: ")))

while (bb[i] >= 0):
print(bb)

-- ERROR:
File "XXXX", line 6
    print(bb)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:26:24) 
-- CODE:
from numpy import *

bb = array(eval(input("Entrada: ")))

while (bb[i] <= 0):
	print(bb)
print(bb)	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:26:45) 
-- CODE:
from numpy import *

bb = array(eval(input("Entrada: ")))
i = 0
while (bb[i] <= 0):
	print(bb)
print(bb)	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:50:03) 
-- CODE:
from numpy import *

bb = array(eval(input("Entrada: ")))

for bb in bb:
	if bb <=0:
		bb.remove(bb)
		
	
print(bb)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
